--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -144,39 +144,68 @@
 
 # This is a good model and has worked well Cline and is faster than the rest.
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
+  &base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   context-window: 131072
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  nseq-max: 2
+
+Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/FMC:
+  <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   nseq-max: 1
   first-message-cache: true
 
+Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
+  <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
+  nseq-max: 1
+  system-prompt-cache: true
+
 # This is a good model and has worked well Cline.
-GLM-4.7-Flash-UD-Q8_K_XL:
+GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   context-window: 131072
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  nseq-max: 2
+
+GLM-4.7-Flash-UD-Q8_K_XL/FMC:
+  <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
   nseq-max: 1
   first-message-cache: true
+
+GLM-4.7-Flash-UD-Q8_K_XL/SPC:
+  <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
+  nseq-max: 1
+  system-prompt-cache: true
 
 # This is a decent model and has worked ok with Cline.
 cerebras_qwen3-coder-reap-25b-a3b-q8_0:
+  &base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   context-window: 131072
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  nseq-max: 2
+
+cerebras_qwen3-coder-reap-25b-a3b-q8_0/FMC:
+  <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   first-message-cache: true
 
+cerebras_qwen3-coder-reap-25b-a3b-q8_0/SPC:
+  <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
+  nseq-max: 1
+  system-prompt-cache: true
+
 # This is a decent model and has worked ok with Cline.
-Qwen3-Coder-30B-A3B-Instruct-Q8_0:
+Qwen3-Coder-30B-A3B-Instruct-Q8_0: &base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
   context-window: 131072
   nbatch: 2048
   nubatch: 512
@@ -184,6 +213,16 @@ Qwen3-Coder-30B-A3B-Instruct-Q8_0:
   cache-type-v: q8_0
   nseq-max: 1
   first-message-cache: true
+
+Qwen3-Coder-30B-A3B-Instruct-Q8_0/FMC:
+  <<: *base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
+  nseq-max: 1
+  first-message-cache: true
+
+Qwen3-Coder-30B-A3B-Instruct-Q8_0/SPC:
+  <<: *base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
+  nseq-max: 1
+  system-prompt-cache: true
 
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
