--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -224,8 +224,8 @@ Qwen3-Coder-30B-A3B-Instruct-Q8_0: &base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
   nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
-  nseq-max: 1
-  first-message-cache: true
+  flash-attention: enabled
+  nseq-max: 2
 
 Qwen3-Coder-30B-A3B-Instruct-Q8_0/FMC:
   <<: *base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
@@ -272,7 +272,7 @@ Qwen3-8B-Q8_0:
 # Non-Reasoning models, tooling support, don't use with Agents.
 
 # Model runs slow and haven't tested it too much.
-GLM-4.7-Flash-Q8_0: &base_GLM_4_7_Flash_Q8_0
+GLM-4.7-Flash-Q8_0:
   context-window: 131072
   nbatch: 2048
   nubatch: 512
@@ -285,15 +285,6 @@ GLM-4.7-Flash-Q8_0: &base_GLM_4_7_Flash_Q8_0
     min_p: 0.01
     top_p: 0.95
     repeat_penalty: 1.0
-
-GLM-4.7-Flash-Q8_0/FMC:
-  <<: *base_GLM_4_7_Flash_Q8_0
-  nseq-max: 1
-  first-message-cache: true
-  sampling-parameters:
-    temperature: 0.7
-    top_p: 1.0
-
 
 # ==============================================================================
 # VISION MODELS
