--- a/sdk/tools/catalog/test_data/image_text_to_text.yaml
+++ b/sdk/tools/catalog/test_data/image_text_to_text.yaml
@@ -4,14 +4,14 @@ models:
     category: Image-Text-to-Text
     owned_by: ggml-org
     model_family: Qwen2.5-VL-3B-Instruct-GGUF
-    web_page: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF
+    web_page: ggml-org/Qwen2.5-VL-3B-Instruct-GGUF
     template:
     files:
       models:
-        - url: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q8_0.gguf
+        - url: ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/Qwen2.5-VL-3B-Instruct-Q8_0.gguf
           size: 3.29 GiB
       proj:
-        url: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
+        url: ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
         size: 845 MiB
     capabilities:
       endpoint: chat_completion
@@ -25,5 +25,5 @@ models:
       rerank: false
     metadata:
       created: 2025-04-13T0:00:00Z
-      collections: https://huggingface.co/collections/ggml-org
+      collections: collections/ggml-org
       description: The Qwen2.5-VL-3B-Instruct model is a compact, open-source, instruction-tuned, Vision-Language Model (VLM) balancing performance with efficiency, This model features robust capabilities in interpreting images, charts, and even long videos, enabling object localization, structured data extraction (JSON), and complex visual reasoning.
