--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -142,7 +142,7 @@
 # ------------------------------------------------------------------------------
 # Coding Agents and configured for Cline or Claude Code
 
-# This is a good model and has worked well Cline and is faster than the rest.
+# This has been the best with Cline.
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
   &base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   context-window: 131072
@@ -168,7 +168,28 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# This is a good model and has worked well Cline.
+# This has been the best with OpenCode.
+# Don't use with Cline
+gpt-oss-120b-F16: &base_gpt-oss-120b-F16
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 2
+
+gpt-oss-120b-F16/FMC:
+  <<: *base_gpt-oss-120b-F16
+  nseq-max: 1
+  first-message-cache: true
+
+gpt-oss-120b-F16/SPC:
+  <<: *base_gpt-oss-120b-F16
+  nseq-max: 1
+  system-prompt-cache: true
+
+# This has worked with Cline and OpenCode but just slow.
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   context-window: 131072
   nbatch: 2048
@@ -196,7 +217,8 @@ GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# This is a decent model and has worked ok with Cline.
+# I have not tested this model too much, but I expect it to
+# behave like the other Qwen3 models.
 cerebras_qwen3-coder-reap-25b-a3b-q8_0:
   &base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   context-window: 131072
@@ -217,30 +239,10 @@ cerebras_qwen3-coder-reap-25b-a3b-q8_0/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# This is a decent model and has worked ok with Cline.
-Qwen3-Coder-30B-A3B-Instruct-Q8_0: &base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
-  context-window: 131072
-  nbatch: 2048
-  nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
-  flash-attention: enabled
-  nseq-max: 2
-
-Qwen3-Coder-30B-A3B-Instruct-Q8_0/FMC:
-  <<: *base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
-  nseq-max: 1
-  first-message-cache: true
-
-Qwen3-Coder-30B-A3B-Instruct-Q8_0/SPC:
-  <<: *base_Qwen3-Coder-30B-A3B-Instruct-Q8_0
-  nseq-max: 1
-  system-prompt-cache: true
-
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
 
-gpt-oss-120b-F16:
+Qwen3-Coder-30B-A3B-Instruct-Q8_0:
   context-window: 131072
   nbatch: 2048
   nubatch: 512
