--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -59,7 +59,8 @@
 # If you want to use a Chat application like OpenWebUI use these settings:
 #   system-prompt-cache: true
 #
-# Cline is working great with cerebras_qwen3-coder-reap-25b-a3b-q8_0
+# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL and
+# cerebras_qwen3-coder-reap-25b-a3b-q8_0.
 #
 # Claude Code needs a model that handles tool calling well with a decent
 # context window. The GPT models have not performed well. I have not
@@ -71,7 +72,7 @@
 # ------------------------------------------------------------------------------
 # Coding Agents and configured for Cline or Claude Code
 
-# This has been the best with Cline.
+# This has been the best with Cline and OpenCode.
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
   &base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   context-window: 131072
@@ -96,8 +97,7 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# This has been the best with OpenCode.
-# Don't use with Cline
+# Don't use with Cline or Open Code.
 gpt-oss-120b-F16: &base_gpt-oss-120b-F16
   context-window: 131072
   nbatch: 2048
