--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -97,26 +97,6 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# Don't use with Cline or Open Code.
-gpt-oss-120b-F16: &base_gpt-oss-120b-F16
-  context-window: 131072
-  nbatch: 2048
-  nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
-  flash-attention: enabled
-  nseq-max: 2
-
-gpt-oss-120b-F16/FMC:
-  <<: *base_gpt-oss-120b-F16
-  nseq-max: 1
-  first-message-cache: true
-
-gpt-oss-120b-F16/SPC:
-  <<: *base_gpt-oss-120b-F16
-  nseq-max: 1
-  system-prompt-cache: true
-
 # This has worked with Cline and OpenCode but just slow.
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   context-window: 131072
@@ -146,7 +126,7 @@ GLM-4.7-Flash-UD-Q8_K_XL/SPC:
 
 # I have not tested this model too much, but I expect it to
 # behave like the other Qwen3 models.
-cerebras_qwen3-coder-reap-25b-a3b-q8_0:
+cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
   &base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   context-window: 131072
   nbatch: 2048
@@ -156,12 +136,12 @@ cerebras_qwen3-coder-reap-25b-a3b-q8_0:
   flash-attention: enabled
   nseq-max: 2
 
-cerebras_qwen3-coder-reap-25b-a3b-q8_0/FMC:
+cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/FMC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   first-message-cache: true
 
-cerebras_qwen3-coder-reap-25b-a3b-q8_0/SPC:
+cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/SPC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   system-prompt-cache: true
@@ -186,6 +166,21 @@ gpt-oss-20b-Q8_0:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+
+# Don't use with Agents.
+gpt-oss-120b-F16: &base_gpt-oss-120b-F16
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 2
+
+gpt-oss-120b-F16/SPC:
+  <<: *base_gpt-oss-120b-F16
+  nseq-max: 1
+  system-prompt-cache: true
 
 # Great model but small context-window :(
 Qwen3-8B-Q8_0:
