--- a/zarf/docker/compose.yaml
+++ b/zarf/docker/compose.yaml
@@ -9,6 +9,11 @@ services:
       - GLOBAL_LOG_LEVEL="DEBUG"
       - ENABLE_PERSISTENT_CONFIG=false
       - OPENAI_API_BASE_URL=http://host.docker.internal:8080/v1
+      - OFFLINE_MODE=true
+      - HF_HUB_OFFLINE=1
+      - RAG_EMBEDDING_MODEL_AUTO_UPDATE=false
+      - RAG_RERANKING_MODEL_AUTO_UPDATE=false
+      - WHISPER_MODEL_AUTO_UPDATE=false
     extra_hosts:
       - host.docker.internal:host-gateway
     ports:
@@ -18,6 +23,7 @@ services:
     image: grafana/grafana:12.3.0
     container_name: grafana
     restart: always
+    pull_policy: never
     environment:
       - GF_ANALYTICS_REPORTING_ENABLED=false
       - GF_ANALYTICS_CHECK_FOR_UPDATES=false
@@ -45,6 +51,7 @@ services:
     image: grafana/loki:3.6.0
     container_name: loki
     restart: always
+    pull_policy: never
     command: -config.file=/loki-conf/loki.yaml -config.expand-env
     ports:
       - "3101:3101"
@@ -57,6 +64,7 @@ services:
     image: prom/prometheus:v3.8.0
     container_name: prometheus
     restart: always
+    pull_policy: never
     command:
       - "--storage.tsdb.retention.time=1m"
       - "--config.file=/prom-conf/prometheus.yaml"
@@ -76,6 +84,7 @@ services:
     image: grafana/promtail:3.6.0
     container_name: promtail
     restart: always
+    pull_policy: never
     command: -config.file=/etc/promtail/promtail.yaml
     ports:
       - "3102:3102"
@@ -93,6 +102,7 @@ services:
     image: grafana/tempo:2.9.0
     container_name: tempo
     restart: always
+    pull_policy: never
     command: -config.file=/tempo-conf/tempo.yaml
     ports:
       - "3200:3200"
