--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -85,6 +85,7 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
   sampling-parameters:
     temperature: 0.7
     top_p: 0.8
@@ -110,6 +111,11 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
+  sampling-parameters:
+    temperature: 0.7
+    top_p: 0.8
+    top_k: 20
 
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/FMC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
@@ -130,6 +136,7 @@ GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
   sampling-parameters:
     temperature: 1.0
     min_p: 0.01
@@ -159,6 +166,7 @@ Qwen3-Coder-30B-A3B-Instruct-Q8_0:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
 
 gpt-oss-20b-Q8_0:
   context-window: 98304
@@ -168,6 +176,7 @@ gpt-oss-20b-Q8_0:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
 
 # Don't use with Agents.
 gpt-oss-120b-F16: &base_gpt-oss-120b-F16
@@ -178,6 +187,7 @@ gpt-oss-120b-F16: &base_gpt-oss-120b-F16
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
 
 gpt-oss-120b-F16/SPC:
   <<: *base_gpt-oss-120b-F16
@@ -206,6 +216,7 @@ GLM-4.7-Flash-Q8_0:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  insecure-logging: true
   sampling-parameters:
     temperature: 1.0
     min_p: 0.01
@@ -222,6 +233,7 @@ Qwen2.5-VL-3B-Instruct-Q8_0:
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  insecure-logging: true
 
 # ==============================================================================
 # AUDIO MODELS
@@ -234,6 +246,7 @@ Qwen2-Audio-7B.Q8_0:
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  insecure-logging: true
 
 # ==============================================================================
 # EMBEDDING MODELS
@@ -246,3 +259,4 @@ embeddinggemma-300m-qat-Q8_0:
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
+  insecure-logging: true
