--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -19,6 +19,14 @@
 #   system-prompt-cache: false           # Cache system prompt KV state for reuse across requests
 #   first-message-cache: false           # Cache first user message KV state (for clients like Cline)
 #   cache-min-tokens: 100                # Min tokens before caching (default: 100, applies to both cache types)
+#   rope-scaling-type: yarn              # RoPE scaling: none, linear, yarn
+#   yarn-orig-ctx: 32768                 # Original training context size (nil = from model)
+#   rope-freq-base: 1000000              # RoPE base frequency (nil = from model, e.g., 10000 Llama, 1000000 Qwen)
+#   rope-freq-scale: 0.25                # RoPE frequency scale (nil = auto-calculated)
+#   yarn-ext-factor: 1.0                 # YaRN extrapolation mix factor (nil = auto, 0 = disable)
+#   yarn-attn-factor: 1.0                # YaRN attention magnitude scaling (nil = default 1.0)
+#   yarn-beta-fast: 32.0                 # YaRN low correction dimension (nil = default 32.0)
+#   yarn-beta-slow: 1.0                  # YaRN high correction dimension (nil = default 1.0)
 
 # ==============================================================================
 # MODEL SELECTION NOTES
@@ -50,24 +58,59 @@
 # However, llama.cpp doesn't currently support the MLX framework.
 
 # ==============================================================================
+# ROPE AND YARN NOTES
+#
+# YaRN (Yet another RoPE extensioN) enables extended context windows beyond a
+# model's native training length. For example, Qwen3 models trained on 32k can
+# support 131k context with YaRN scaling.
+#
+# Minimal configuration for YaRN (llama.cpp auto-calculates the rest):
+#   rope-scaling-type: yarn
+#   yarn-orig-ctx: 32768       # Original training context size
+#   context-window: 131072     # Desired extended context
+#
+# Auto-calculated defaults when using YaRN:
+#   rope-freq-base    - Read from model metadata (Qwen3 = 1000000, Llama = 10000)
+#   rope-freq-scale   - Auto-calculated from context ratio
+#   yarn-ext-factor   - Auto-calculated (nil triggers this)
+#   yarn-attn-factor  - 1.0
+#   yarn-beta-fast    - 32.0
+#   yarn-beta-slow    - 1.0
+#
+# The advanced parameters exist for models with non-standard RoPE configurations
+# (e.g., DeepSeek-V2). For typical YaRN usage, the minimal config is sufficient.
+#
+# Note: Extended context increases KV cache memory proportionally. A 4x context
+# extension (32k → 131k) requires 4x the KV cache VRAM per slot.
+
+# ==============================================================================
 # CONFIGURATION NOTES
 #
-# If you want to try using a model with an Agent, use these settings:
-#   nseq-max: 1
-#   first-message-cache: true
-#
-# If you want to use a Chat application like OpenWebUI use these settings:
+# If you want to use an Agent or Chat application that uses a System Prompt,
+# use these settings. OpenWebUI, OpenCode and Cline (with R1 off) will need this.
 #   nseq-max: 1
 #   system-prompt-cache: true
 #
-# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL and
-# cerebras_qwen3-coder-reap-25b-a3b-q8_0.
+# If you are using an Agent that won't use a System Prompt, but sends their
+# large prompt as their first user message, using these settings. Client's will
+# do this if you Enable R1 messages format.
+#   nseq-max: 1
+#   first-message-cache: true
+#
+# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC and
+# cerebras_qwen3-coder-reap-25b-a3b-q8_0/SPC.
 #
 # Claude Code needs a model that handles tool calling well with a decent
 # context window. I have not found a model yet that works well with Claude Code.
 #
 # Stay away from using the gpt-oss model of any size with agents. It will not
 # behave in several aspects, but specfically it will not listen.
+#
+# You will notice with the Qwen3-8B-Q8_0 model a YARN configuration. This is
+# how you can extend the models context window when you need it.
+#
+# NOTE: The R1 message format in Cline is a specialized prompt structure
+# required for DeepSeek R1 models, which converts system prompts into user messages.
 
 # ==============================================================================
 # TEXT INFERENCE MODELS
@@ -91,15 +134,15 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
     top_p: 0.8
     top_k: 20
 
-Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/FMC:
-  <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
-  nseq-max: 1
-  first-message-cache: true
-
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
   <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   nseq-max: 1
   system-prompt-cache: true
+
+Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/FMC:
+  <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
+  nseq-max: 1
+  first-message-cache: true
 
 # Smaller version of the 30B model and works well.
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
@@ -117,15 +160,15 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
     top_p: 0.8
     top_k: 20
 
-cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/FMC:
-  <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
-  nseq-max: 1
-  first-message-cache: true
-
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/SPC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   system-prompt-cache: true
+
+cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/FMC:
+  <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
+  nseq-max: 1
+  first-message-cache: true
 
 # This has worked with Cline and OpenCode but just slow.
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
@@ -138,22 +181,19 @@ GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   nseq-max: 2
   insecure-logging: true
   sampling-parameters:
-    temperature: 1.0
-    min_p: 0.01
-    top_p: 0.95
-
-GLM-4.7-Flash-UD-Q8_K_XL/FMC:
-  <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
-  nseq-max: 1
-  first-message-cache: true
-  sampling-parameters:
     temperature: 0.7
-    top_p: 1.0
+    top_p: 0.8
+    top_k: 20
 
 GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
   nseq-max: 1
   system-prompt-cache: true
+
+GLM-4.7-Flash-UD-Q8_K_XL/FMC:
+  <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
+  nseq-max: 1
+  first-message-cache: true
 
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
@@ -195,14 +235,21 @@ gpt-oss-120b-F16/SPC:
   system-prompt-cache: true
 
 # Great model but small context-window :(
-Qwen3-8B-Q8_0:
-  context-window: 40960
+Qwen3-8B-Q8_0: &base_Qwen3-8B-Q8_0
+  context-window: 32768
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+
+# Extended context with YaRN scaling (32k training → 131k).
+Qwen3-8B-Q8_0/YARN:
+  <<: *base_Qwen3-8B-Q8_0
+  context-window: 131072
+  rope-scaling-type: yarn
+  yarn-orig-ctx: 32768
 
 # ------------------------------------------------------------------------------
 # Non-Reasoning models, tooling support, don't use with Agents.
@@ -218,9 +265,9 @@ GLM-4.7-Flash-Q8_0:
   nseq-max: 2
   insecure-logging: true
   sampling-parameters:
-    temperature: 1.0
-    min_p: 0.01
-    top_p: 0.95
+    temperature: 0.7
+    top_p: 0.8
+    top_k: 20
 
 # ==============================================================================
 # VISION MODELS
