--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -151,6 +151,7 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   nseq-max: 1
   incremental-cache: true
+  max-imc-sessions: 1
 
 # Smaller version of the 30B model and works well.
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
@@ -177,6 +178,7 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   incremental-cache: true
+  max-imc-sessions: 1
 
 # This has worked with Cline and OpenCode but just slow.
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
@@ -202,6 +204,7 @@ GLM-4.7-Flash-UD-Q8_K_XL/IMC:
   <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
   nseq-max: 1
   incremental-cache: true
+  max-imc-sessions: 1
 
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
@@ -237,10 +240,11 @@ gpt-oss-120b-F16: &base_gpt-oss-120b-F16
   nseq-max: 2
   insecure-logging: true
 
-gpt-oss-120b-F16/SPC:
+gpt-oss-120b-F16/IMC:
   <<: *base_gpt-oss-120b-F16
   nseq-max: 1
-  system-prompt-cache: true
+  incremental-cache: true
+  max-imc-sessions: 1
 
 # Great model but small context-window :(
 Qwen3-8B-Q8_0: &base_Qwen3-8B-Q8_0
@@ -258,6 +262,21 @@ Qwen3-8B-Q8_0/YARN:
   context-window: 131072
   rope-scaling-type: yarn
   yarn-orig-ctx: 32768
+
+# System Prompt Cache variant for testing.
+# DO NOT REMOVE
+Qwen3-8B-Q8_0/SPC:
+  <<: *base_Qwen3-8B-Q8_0
+  nseq-max: 1
+  system-prompt-cache: true
+
+# Incremental Message Cache variant for testing.
+# DO NOT REMOVE
+Qwen3-8B-Q8_0/IMC:
+  <<: *base_Qwen3-8B-Q8_0
+  nseq-max: 1
+  incremental-cache: true
+  max-imc-sessions: 2
 
 # ------------------------------------------------------------------------------
 # Non-Reasoning models, tooling support, don't use with Agents.
