--- a/zarf/docker/compose.yaml
+++ b/zarf/docker/compose.yaml
@@ -18,6 +18,8 @@ services:
       - host.docker.internal:host-gateway
     ports:
       - "8081:8080"
+    volumes:
+      - ./openwebui:/app/backend/data
 
   grafana:
     image: grafana/grafana:12.3.0
