--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -80,11 +80,12 @@ jobs:
         run: |
           export RUN_IN_PARALLEL=no
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
-      - name: Run vet, linter, vuln checks
+      - name: Run vet, linter, vuln, diff checks
         run: |
           CGO_ENABLED=0 go vet ./...
           staticcheck -checks=all ./...
           govulncheck ./...
+          go fix -diff ./...
       - name: Delete existing models cache
         if: github.ref == 'refs/heads/main' && steps.cache-models.outputs.cache-hit != 'true'
         env:
