--- a/sdk/tools/catalog/test_data/image_text_to_text.yaml
+++ b/sdk/tools/catalog/test_data/image_text_to_text.yaml
@@ -9,10 +9,10 @@ models:
     files:
       models:
         - url: ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/Qwen2.5-VL-3B-Instruct-Q8_0.gguf
-          size: 3.29 GiB
+          size: 3.29 GB
       proj:
         url: ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
-        size: 845 MiB
+        size: 845 MB
     capabilities:
       endpoint: chat_completion
       images: true
