--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -96,6 +96,18 @@
 # ==============================================================================
 # TEXT INFERENCE MODELS
 
+Qwen3-Coder-Next-Q8_0/CLINE:
+  nseq-max: 1
+  incremental-cache: true
+
+Qwen3-Coder-Next-Q8_0/KILO:
+  nseq-max: 3
+  incremental-cache: true
+
+Qwen3-Coder-Next-Q8_0/SPC:
+  nseq-max: 1
+  system-prompt-cache: true
+
 # ------------------------------------------------------------------------------
 
 Qwen3.5-35B-A3B-UD-Q8_K_XL/CLINE:
